2009-01-27  Jürg Billeter  <j@bitron.ch>

	* gee/arraylist.vala:
	* gee/list.vala:
	* gee/readonlylist.vala:

	Add List.slice method, patch by Zeeshan Ali Khattak,
	fixes bug 569188

2008-11-01  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2008-11-01  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.1.4 release

2008-05-30  Jürg Billeter  <j@bitron.ch>

	* gee/hashmap.vala:
	* gee/hashset.vala:

	Use [Compact] for the HashMap.Node and HashSet.Node classes

2008-05-30  Jürg Billeter  <j@bitron.ch>

	* tests/testarraylist.vala: remove invalid type tests as these
	cause compile errors with recent Vala versions

2008-05-07  Jürg Billeter  <j@bitron.ch>

	* gee/Makefile.am:
	* tests/Makefile.am:

	Update build system to use valac -C,
	patch by Jaap A. Haitsma, fixes bug 531224

2008-05-01  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2008-05-01  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.1.3 release

2008-05-01  Jürg Billeter  <j@bitron.ch>

	* tests/testarraylist.vala:
	* tests/testhashmap.vala:
	* tests/testhashset.vala:

	Extend test suite, based on patch by Quikee

2008-04-14  Jürg Billeter  <j@bitron.ch>

	* gee/arraylist.vala, gee/hashmap.vala, gee/hashset.vala,
	  gee/iterator.vala, gee/list.vala, gee/map.vala,
	  gee/readonlycollection.vala, gee/readonlylist.vala,
	  gee/readonlymap.vala, gee/readonlyset.vala: mark types as
	  nullable where appropriate

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* gee/arraylist.vala, gee/hashmap.vala, gee/hashset.vala,
	  gee/readonlycollection.vala, gee/readonlylist.vala,
	  gee/readonlymap.vala, gee/readonlyset.vala: remove deprecated
	  syntax for construct parameters

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* gee/arraylist.vala, gee/hashmap.vala, gee/hashset.vala: remove
	  obsolete non-null type syntax

2008-03-08  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2008-03-08  Jürg Billeter  <j@bitron.ch>
